--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "stripe": "^14.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
@@ -29,7 +30,9 @@
     "node",
     "express",
     "mongodb",
-    "jwt"
+    "jwt",
+    "stripe",
+    "payments"
   ],
   "author": "",
   "license": "MIT"
