feat(messaging): implement messaging system with real-time chat, conversation management, and message templates. Added WebSocket support for notifications and typing indicators. Enhanced user experience with unread message counts and file uploads.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,28 @@
 # Database Configuration
-MONGODB_URI=mongodb://localhost:27017/rental-system
+MONGODB_URI=mongodb://localhost:27017/your-database-name
 
 # Server Configuration
 PORT=5000
 NODE_ENV=development
 
-# JWT Secret
+# JWT Configuration
 JWT_SECRET=your_jwt_secret_here
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000
+
+# Stripe Configuration
+STRIPE_SECRET_KEY=your_stripe_secret_key_here
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here
+
+# Admin Configuration
+ADMIN_EMAIL=your_admin_email_here
+ADMIN_PASSWORD=your_admin_password_here
+ADMIN_NAME=your_admin_name_here
+
+# Message Encryption (REQUIRED)
+MESSAGE_ENCRYPTION_KEY=your_message_encryption_key_here
+
+# CORS Configuration (Multiple Origins)
+FRONTEND_URL=http://localhost:3000
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
