--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,14 @@
     "@tailwindcss/forms": "^0.5.10",
     "axios": "^1.6.2",
     "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.13.2",
     "react": "^18.2.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-router-dom": "^6.20.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
