--- a/backend/package.json
+++ b/backend/package.json
@@ -21,15 +21,18 @@
     "express-rate-limit": "^8.0.1",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
+    "html-pdf-node": "^1.0.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
     "node-cache": "^5.1.2",
+    "puppeteer": "^24.16.0",
     "sharp": "^0.33.4",
     "socket.io": "^4.8.1",
-    "stripe": "^14.7.0"
+    "stripe": "^14.7.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
