--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,19 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.4.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
+    "@tremor/react": "^3.18.7",
     "axios": "^1.6.2",
+    "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.13.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.20.1",
+    "recharts": "^3.1.2",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
